# ZorkAI

./: .git-cache-refresh  .gitignore  .replit  Directory.Build.targets  README.md  SLEEP_MECHANICS.md  Zork.sln  Zork.sln.DotSettings  build-web.sh  docker-compose.yml  package-lock.json  package.json  replit.nix  savegame_schema.json  session_schema.json  test-web.sh
.claude/: CLAUDE.md  README.md  SessionStart  settings.local.json  update-cache.sh
API/: API.csproj  API.http  Program.cs  Zork.http  appsettings.Development.json
AdventureBreaker/: .gitignore  HANDOFF.md  README.md  pyproject.toml
AdventureBreaker/adventurebreaker/: __init__.py  client.py  config.py  harness.py  ledger.py  models.py  oracles.py
AdventureBreaker/adventurebreaker/spine/: planetfall.json  zork1.json
AdventureBreaker/tools/: extract_spine.py
Azure/: Azure.csproj  RedisSessionRepository.cs
Bedrock/: Bedrock.csproj  ClaudeClientBase.cs  ClaudeFourClient.cs  ClaudeFourGenerationClient.cs  ClaudeFourParser.cs  ClaudeFourParserClient.cs
ChatLambda/: ChatLambda.csproj  ChatWithAmbassador.cs  ChatWithBlather.cs  ChatWithCompanion.cs  ChatWithFloyd.cs  CompanionChatFactory.cs  IChatWithAmbassador.cs  IChatWithBlather.cs  IChatWithFloyd.cs  IParseConversation.cs  LocalCompanionChat.cs  LocalParseConversation.cs  ParseConversation.cs
CloudWatch/: CloudWatch.csproj  CloudWatchLogger.cs  CloudWatchLoggerFactory.cs  ICloudWatchLogger.cs
Console/: Console.csproj  Program.cs  appsettings.json
Docs/: CREATING_A_NEW_GAME.md  HUNGER_THIRST_MECHANICS.md
DynamoDb/: DynamoDb.csproj  (+6 more)
(+1547 files in other folders)
